[gateway] add upstream keepalive configuration
